--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hts-engine"]
 	path = hts-engine
-	url = git@github.com:zyamusic/hts-engine.git
+	url = git@github.com:thomasjwebb/hts-engine.git
